orionld/rendered/orion-ld/templates/mongodb.yaml
---
# Source: orion-ld/templates/mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    name: mongodb-rs
spec:
  type: ClusterIP
  selector:
    name: mongodb-rs
  ports:
    - name: mongodb
      port: 27017
      protocol: TCP
---
# Source: orion-ld/templates/mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  labels:
    name: mongodb-rs
spec:
  replicas: 1
  selector:
    matchLabels: 
      name: mongodb-rs
  strategy:
    type: RollingUpdate 
  template:
    metadata:
      name: mongo-db
      labels:
        name: mongodb-rs
    spec:
      containers:
        - name: mongo-db
          image: dockers.fiware.org/mongo:5.0
          args: ["--nojournal"]
          volumeMounts:
            - name: mongodb-volume
              mountPath: /data/db
      volumes:
        - name: mongodb-volume
          persistentVolumeClaim:
            claimName: mongodb-volume
