orionld/rendered/orion-ld/templates/timescale.yaml
---
# Source: orion-ld/templates/timescale.yaml
apiVersion: v1
kind: Service
metadata:
  name: timescale
  labels:
    name: timescale
spec:
  type: ClusterIP
  selector:
    name: timescale
  ports:
    - name: timescale
      port: 5432
      protocol: TCP
---
# Source: orion-ld/templates/timescale.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timescale
  labels:
    name: timescale
spec:
  replicas: 1
  selector:
    matchLabels: 
      name: timescale
  strategy:
    type: RollingUpdate
  template:
    metadata:
      name: timescale
      labels:
        name: timescale
    spec:
      restartPolicy: Always
      containers:
        - name: timescale
          image: timescale/timescaledb-postgis:latest-pg12
          volumeMounts:
            - name: timescale-volume
              mountPath: /var/lib/postgresql
          ports:
            - containerPort: 5432
      volumes:
        - name: timescale-volume
          persistentVolumeClaim:
            claimName: timescale-volume
