orionld/rendered/orion-ld/templates/mintaka.yaml
---
# Source: orion-ld/templates/mintaka.yaml
apiVersion: v1
kind: Service
metadata:
  name: mintaka
  labels:
    app: mintaka
spec:
  type: ClusterIP
  selector:
    name: mintaka
  ports:
  - port: 8080
    protocol: TCP
    name: mintaka-port
---
# Source: orion-ld/templates/mintaka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mintaka
  labels:
    name: mintaka
spec:
  replicas: 1
  selector:
    matchLabels: 
      name: mintaka
  strategy:
    type: RollingUpdate
  template:
    metadata:
      name: mintaka
      labels:
        name: mintaka
    spec:
      restartPolicy: Always
      containers:
        - name: timescale
          image: quay.io/fiware/mintaka:latest
          ports:
          - containerPort: 8080
---
# Source: orion-ld/templates/mintaka.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mintaka
spec:
  rules:
  - host: mintaka.apps-crc.testing
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mintaka
            port: 
              number: 8080
