orionld/rendered/orion-ld/templates/orion-ld-ingress.yaml
---
# Source: orion-ld/templates/orion-ld-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orion-ld-service
spec:
  rules:
  - host: orionld.apps-crc.testing
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: orion-ld-service
            port: 
              number: 1026
